feat: add user role management and JWT authentication; implement error handling and validation for authentication requests