@@ -1,12 +1,17 @@
 package android.tester.backend.configurations;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -16,22 +21,30 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity // Enables @PreAuthorize
+@RequiredArgsConstructor
 public class SecurityConfiguration {
 
   @Value("${cors.allowed.origins}")
   private String allowedOrigins;
 
+  private final JwtAuthenticationFilter jwtAuthFilter;
+  private final AuthenticationProvider authenticationProvider;
+
   @Bean
   public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
     http
       .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-      .csrf(AbstractHttpConfigurer::disable) // Disabled for REST APIs
+      .csrf(AbstractHttpConfigurer::disable)
       .authorizeHttpRequests(auth -> auth
-        // Allowing all requests for now to enable Postman and local dev testing
-        // Once login is implemented, you can change this to .authenticated()
-        .requestMatchers("/api/**").permitAll()
-        .anyRequest().permitAll()
-      );
+        .requestMatchers("/api/v1/auth/**").permitAll()
+        .requestMatchers("/api/v1/debug/**").permitAll()
+        .requestMatchers("/api/v1/android/**").permitAll()
+        .anyRequest().authenticated() // <= nori kad viskas butu autorizuota
+      )
+      .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+      .authenticationProvider(authenticationProvider)
+      .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
     return http.build();
   }
@@ -40,15 +53,11 @@ public class SecurityConfiguration {
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
 
-    // Split the comma-separated origins from properties
-    configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+    List<String> origins = allowedOrigins != null ? Arrays.asList(allowedOrigins.split(",")) : List.of("*");
+    configuration.setAllowedOrigins(origins);
 
-    // Allowed Methods
     configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-
-    // Allowed Headers (Allows Authorization, Content-Type for files/base64, etc.)
     configuration.setAllowedHeaders(List.of("*"));
-
     configuration.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
